<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    android:padding="16dp">

    <Button
        android:id="@+id/addIncomeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_income_button"
        android:textColor="#FFFFFF"
        android:backgroundTint="#000000"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/addExpenseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_expense_button"
        android:textColor="#FFFFFF"
        android:backgroundTint="#000000"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:textColor="#FFFFFF"
        android:backgroundTint="#000000"/>
</LinearLayout>